--- a/testBasic/index.html
+++ b/testBasic/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <!-- Load the Paper.js library -->
-<script type="text/javascript" src="paperjs/docs/assets/js/paper.js"></script>
+<script type="text/javascript" src="../paperjs/docs/assets/js/paper.js"></script>
 <!-- Define inlined PaperScript associate it with myCanvas -->
 <script type="text/paperscript" canvas="myCanvas">
 	
